colcon_ws/log/build_2022-09-10_23-19-23/gatekeeper/stdout_stderr.log
[35m[1mScanning dependencies of target gatekeeper[0m
[ 40%] Built target nominal_controller
[ 60%] [32mBuilding CXX object CMakeFiles/gatekeeper.dir/src/gatekeeper.cpp.o[0m
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp: In member function ‘void gatekeeper::Gatekeeper::cloud_callback(sensor_msgs::msg::PointCloud2_<std::allocator<void> >::SharedPtr)’:
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:100:23: error: ‘PointCloud2’ is not a member of ‘pcl’; did you mean ‘PointCloud’?
  100 |   pcl::VoxelGrid<pcl::PointCloud2> vox;
      |                       ^~~~~~~~~~~
      |                       PointCloud
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:100:23: error: ‘PointCloud2’ is not a member of ‘pcl’; did you mean ‘PointCloud’?
  100 |   pcl::VoxelGrid<pcl::PointCloud2> vox;
      |                       ^~~~~~~~~~~
      |                       PointCloud
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:100:34: error: template argument 1 is invalid
  100 |   pcl::VoxelGrid<pcl::PointCloud2> vox;
      |                                  ^
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:101:7: error: request for member ‘setInputCloud’ in ‘vox’, which is of non-class type ‘int’
  101 |   vox.setInputCloud(filtered.make_shared());
      |       ^~~~~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:101:30: error: ‘using PCLPointCloud = class pcl::PointCloud<pcl::PointXYZ>’ {aka ‘class pcl::PointCloud<pcl::PointXYZ>’} has no member named ‘make_shared’; did you mean ‘makeShared’?
  101 |   vox.setInputCloud(filtered.make_shared());
      |                              ^~~~~~~~~~~
      |                              makeShared
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:102:7: error: request for member ‘setLeafSize’ in ‘vox’, which is of non-class type ‘int’
  102 |   vox.setLeafSize(0.05, 0.05, 0.05);
      |       ^~~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:103:7: error: request for member ‘filter’ in ‘vox’, which is of non-class type ‘int’
  103 |   vox.filter(filtered);
      |       ^~~~~~
make[2]: *** [CMakeFiles/gatekeeper.dir/build.make:63: CMakeFiles/gatekeeper.dir/src/gatekeeper.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/gatekeeper.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
